# openvpn-linux-client-gui

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  ManualTesting.md  README.md  install.sh  plan.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release-main.yml  release-stable.yml
debian/: changelog  control  copyright  openvpn3-client-linux.postinst  openvpn3-client-linux.postrm  rules
docs/: dbus-notes.md  feature-parity.md  packaging.md  product-spec.md  repository-publishing.md  security.md
packaging/deb/: README.md
packaging/desktop/: openvpn3-client.desktop.in
packaging/icons/: README.md
packaging/metainfo/: com.openvpn3.clientlinux.metainfo.xml
packaging/polkit/: README.md  com.openvpn3.clientlinux.policy
packaging/rpm/: README.md  openvpn3-client-linux.spec
packaging/scripts/: install_shared_assets.py  install_wheel.py  release_version.py
packaging/systemd/: README.md  openvpn3-client-linux.service
packaging/uri-handler/: README.md  openvpn3-client-linux.xml
src/app/: __init__.py  application.py  main.py  styles.css  theme.py  tray.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  _compat.py  app_state.py  autostart.py  bootstrap.py  catalog.py  connection_preparation.py  diagnostics.py  events.py  models.py  onboarding.py  proxies.py  secrets.py  session_manager.py  settings.py  state_machine.py  telemetry.py  version.py
src/openvpn3/: __init__.py  attention_service.py  backend_service.py  configuration_service.py  dbus_client.py  introspection_service.py  log_service.py  netcfg_service.py  session_service.py
src/ovpn3_dbus/: backend_service.py  (+6 more)
(+39 files in other folders)
