[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvpn3-client-linux"
version = "0.1.0"
description = "Native Linux GUI and CLI for OpenVPN 3 Linux"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Codex" }
]
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
ovpn-gui = "cli.main:main"
ovpn3-linux-gui = "app.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
