[build-system]
requires = ["setuptools>=59.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvpn3-client-linux"
version = "0.1.0"
description = "Native Linux GUI and CLI for OpenVPN 3 Linux"
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
authors = [
  { name = "Mehedi Hassan", email = "howlader.mehedihassan@gmail.com" }
]
dependencies = []

[dependency-groups]
dev = [
  "exceptiongroup; python_version < '3.11'",
  "pytest>=8.0",
]

[project.scripts]
ovpn-gui = "cli.main:main"
ovpn3-linux-gui = "app.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["styles.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "e2e: GTK-backed end-to-end smoke tests"
]
